Test/Files/ExpressionTypeChecker/Full/FullTests/Out/testcase91-04.out
Parse Error

Parse error on line 26:
...{			result=1;		}	}}
--------------------^
Expecting 'return'